# jira-agile-toolbox

./: .gitattributes  .gitignore  .readthedocs.yml  CODE_OF_CONDUCT.MD  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-package.yml  python-publish.yml
docs/source/: conf.py  index.rst
docs/source/_static/css/: custom_width.css
jira-agile-toolbox/: __init__.py
jira_agile_toolbox/: __init__.py  version.py
tests/: lib_for_tests.py  test_epic_interactions.py  test_label_interactions.py  test_ranking.py  test_version.py
