[metadata]
name = jira_agile_toolbox
description = Extends standard jira package with agile specific metrics
long_description = file: README.rst
long_description_content_type = text/markdown
url = https://github.com/studioj/jira-agile-toolbox
version = attr: jira_agile_toolbox.__version__
author = Jef Neefs
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities
    Topic :: Office/Business
    Topic :: Software Development
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Internet :: WWW/HTTP
keywords = api, atlassian, jira, rest, web, agile


[options]
include_package_data = True
packages = find:
install_requires =
    jira
python_requires = >=3.6

[options.extras_require]
test = pytest

[tool:pytest]
minversion = 6.0
addopts = -ra -q
testpaths =
    tests